# docs/swagger.yaml
@@ -312,10 +312,20 @@ paths:
             items:
               $ref: '#/definitions/models.Role'
             type: array
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handlers.ProblemDetails'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/handlers.ProblemDetails'
         "500":
           description: Internal error
           schema:
             $ref: '#/definitions/handlers.ProblemDetails'
+      security:
+      - Bearer: []
       summary: Get all roles
       tags:
       - roles
@@ -341,6 +351,14 @@ paths:
           description: Bad request
           schema:
             $ref: '#/definitions/handlers.ProblemDetails'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handlers.ProblemDetails'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/handlers.ProblemDetails'
         "409":
           description: Conflict
           schema:
@@ -349,6 +367,8 @@ paths:
           description: Internal error
           schema:
             $ref: '#/definitions/handlers.ProblemDetails'
+      security:
+      - Bearer: []
       summary: Create a role
       tags:
       - roles
@@ -370,6 +390,14 @@ paths:
           description: Bad request
           schema:
             $ref: '#/definitions/handlers.ProblemDetails'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handlers.ProblemDetails'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/handlers.ProblemDetails'
         "404":
           description: Not found
           schema:
@@ -378,6 +406,8 @@ paths:
           description: Internal error
           schema:
             $ref: '#/definitions/handlers.ProblemDetails'
+      security:
+      - Bearer: []
       summary: Delete a role
       tags:
       - roles
@@ -400,10 +430,20 @@ paths:
           description: Bad request
           schema:
             $ref: '#/definitions/handlers.ProblemDetails'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handlers.ProblemDetails'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/handlers.ProblemDetails'
         "404":
           description: Not found
           schema:
             $ref: '#/definitions/handlers.ProblemDetails'
+      security:
+      - Bearer: []
       summary: Get role by ID
       tags:
       - roles
@@ -445,10 +485,20 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/handlers.ProblemDetails'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handlers.ProblemDetails'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/handlers.ProblemDetails'
         "500":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/handlers.ProblemDetails'
+      security:
+      - Bearer: []
       summary: List all users
       tags:
       - users
@@ -472,6 +522,14 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/handlers.ProblemDetails'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handlers.ProblemDetails'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/handlers.ProblemDetails'
         "404":
           description: Not Found
           schema:
@@ -480,6 +538,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/handlers.ProblemDetails'
+      security:
+      - Bearer: []
       summary: Delete user
       tags:
       - users
@@ -504,10 +564,20 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/handlers.ProblemDetails'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handlers.ProblemDetails'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/handlers.ProblemDetails'
         "404":
           description: Not Found
           schema:
             $ref: '#/definitions/handlers.ProblemDetails'
+      security:
+      - Bearer: []
       summary: Get user by ID
       tags:
       - users
@@ -535,6 +605,10 @@ paths:
             $ref: '#/definitions/handlers.ProblemDetails'
         "401":
           description: Unauthorized
+          schema:
+            $ref: '#/definitions/handlers.ProblemDetails'
+        "403":
+          description: Forbidden
           schema:
             $ref: '#/definitions/handlers.ProblemDetails'
         "500":
@@ -571,6 +645,10 @@ paths:
           description: Unauthorized
           schema:
             $ref: '#/definitions/handlers.ProblemDetails'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/handlers.ProblemDetails'
         "404":
           description: Not Found
           schema:
@@ -579,6 +657,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/handlers.ProblemDetails'
+      security:
+      - Bearer: []
       summary: Change user role
       tags:
       - users
